--- a/01057133-Exercise8-1.html
+++ b/01057133-Exercise8-1.html
@@ -109,7 +109,7 @@
 
   <body>
     <a
-      href="https://github.com/CCYuann/HTML_HW/blob/main/01057133-Exercise8-1"
+      href="https://ccyuann.github.io/HTML_HW/01057133-Exercise8-1.html"
       target="_blank"
       >GitHub Link</a
     >
